# ktconsole

./: .gitignore  README.en.md  README.md  index.html  package.json  vite.config.js
.github/workflows/: release.yml
docs/: indextts.md  provider-cli-reference.md
scripts/: gen_release_notes.py  release.py
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: backup.rs  commands.rs  connection.rs  mod.rs  schema.rs
src-tauri/src/db/models/: mod.rs  settings.rs
src-tauri/src/tunnel/: commands.rs  cpolar.rs  frp.rs  gradio.rs  manager.rs  mod.rs  ngrok.rs  provider.rs
src/assets/styles/: themes.css  variables.css
src/components/: CreateTunnelModal.vue
src/components/layout/: AppLayout.vue  MainContent.vue  MobileNav.vue  Navbar.vue  NavigationMenu.vue  Sidebar.vue  StatusBar.vue
src/router/: index.js
src/services/: database.ts
src/stores/: index.js  layout.js  theme.js
src/types/: index.ts
src/utils/: tauriApi.js
src/views/dashboard/: index.vue
src/views/settings/: index.vue
src/views/tunnels/: index.vue
