[package]
name = "kinetic-console"
version = "0.1.0"
description = "Kinetic Console - Port Forwarding Manager"
authors = ["CicleByte"]
edition = "2021"

[lib]
name = "kinetic_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"], default-features = false }
